<resources>
    <string name="app_name">Ecommerce</string>
    <string name="app_icon_image_desc">AppIconImageDesc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bg_image_desc">bg image desc</string>
    <string name="signup_welcome_hello">Hello,</string>
    <string name="signup_welcome_text">Sign Up!</string>
    <string name="signup_name_hint">USER NAME</string>
    <string name="signup_name_ph">Your name</string>
    <string name="signup_mobile_hint">MOBILE</string>
    <string name="signup_mobile_ph">Your mobile</string>
    <string name="signup_email_hint">E-Mail</string>
    <string name="signup_email_ph">Your email</string>
    <string name="signup_password_hint">PASSWORD</string>
    <string name="signup_password_ph">Enter password</string>
    <string name="signup_conf_password_hint">CONFIRM PASSWORD</string>
    <string name="signup_cnf_password_ph">Enter password again</string>
    <string name="signup_seller_text">Do you wish to sell any products?</string>
    <string name="signup_switch_tnc_label">I accept the policy and terms</string>
    <string name="signup_btn_text">Signup</string>
    <string name="signup_login_text">Already have an account? Log In</string>
</resources>