<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.SignupFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/signup_image_view"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login_bg_img"
            android:contentDescription="@string/bg_image_desc" />
        <TextView
            android:id="@+id/signup_welcome_hello_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/signup_welcome_hello"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@id/signup_image_view"
            app:layout_constraintTop_toTopOf="@id/signup_image_view"

            />
        <TextView
            android:id="@+id/signup_welcome_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/signup_welcome_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            app:layout_constraintStart_toStartOf="@id/signup_image_view"
            app:layout_constraintTop_toBottomOf="@id/signup_welcome_hello_tv"

            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameOutlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/signup_name_hint"
            app:expandedHintEnabled="false"
            app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_image_view"
            app:placeholderText="@string/signup_name_ph"
            app:placeholderTextAppearance="@style/TextAppearance.MaterialComponents.Body2"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>